--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "['DHAKA', 'DHAKA', 'KOTWALI']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.date"
+   ]
   }
  ],
  "metadata": {
