--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1934,7 +1934,7 @@
     "\n",
     "People spend more on Red bull 12 oz for each transaction, on average.\n",
     "\n",
-    "## Lowest 5 items\n",
+    "## Lowest 5 items:\n",
     "- Coffee-Mate Original Flavor Cold: -70.03\n",
     "- Blue Diamond Almonds Rstd, Sltd: -68.6\n",
     "- Ginger Ale: -66.34\n",
@@ -1979,7 +1979,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Highest month is November, and the lowest month is January."
+    "The highest month is November, and the lowest month is January."
    ]
   },
   {
@@ -2554,7 +2554,7 @@
     "- PATGRAM: 2.75\n",
     "- DIGHALIA: 2.70\n",
     "\n",
-    "## Lowest 5\n",
+    "## LOWEST 5:\n",
     "- PUTHIA: -3.15\n",
     "- KHILKHET: -2.63\n",
     "- SUTRAPUR: -2.52\n",
@@ -2567,7 +2567,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "Since people spend the most money at 6 AM, and the top 5 items are caffeine related items, we can infer that people tend to spend more money when they wake up toward caffeien items for them to work."
+    "Since people spend the most money at 6 AM, and the top 5 items are caffeine related items, we can infer that people tend to spend more money when they wake up toward caffine items for them to work."
    ]
   }
  ],
